# git-tools

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  STYLE.md  git-tools.env.example  mappings.json.example  pyproject.toml
.github/workflows/: version-bump-git-flow-classic.yml.example  version-bump-git-flow-variant.yml
.zed/: settings.json.example
docs/: git-flow-guide.md
git_tools/: bump.py  cli.py
git_tools/config/: config.py  mappings.py
git_tools/generators/: base.py  bumpgen.py  commitgen.py  initgen.py  issueprgen.py
git_tools/prompts/: commitgen_prompt.txt  commitgen_user_prompt.txt  issuepr_focus_instruction_both.txt  issuepr_focus_instruction_commits.txt  issuepr_focus_instruction_diffs.txt  issuepr_generation_both.txt  issuepr_generation_issue.txt  issuepr_generation_pr.txt  issuepr_promotion_context.txt  issuepr_prompt.txt  issuepr_title_instruction_both_default.txt  issuepr_title_instruction_both_hotfix.txt  issuepr_title_instruction_both_release.txt  issuepr_title_instruction_both_sync.txt  issuepr_title_instruction_issue.txt  issuepr_title_instruction_pr_default.txt  issuepr_title_instruction_pr_hotfix.txt  issuepr_title_instruction_pr_release.txt  issuepr_title_instruction_pr_sync.txt  issuepr_user_prompt_both.txt  issuepr_user_prompt_issue.txt  issuepr_user_prompt_pr.txt
git_tools/templates/: __init__.py  commit_template.txt  issue_template.txt  (+1 more)
tests/: test_bump.py  test_bump_generator.py  test_cli.py  test_commitgen.py  test_initgen.py  test_issuepr_prompt.py  test_openrouter_provider_config.py  test_provider_config.py
